--- a/ChatSample/Properties/launchSettings.json
+++ b/ChatSample/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "ChatSample": {
+    "LockDown": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
